--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<img src="images/20.png" id="bing-img" style="display:none;" />
 	<div class="banner">
 		<div class="turnplate" style="background-image:url(images/turnplate-bg.png);background-size:100% 100%;">
-			<canvas class="item" id="wheelcanvas" width="419px" height="416px"></canvas>
+			<canvas class="item" id="wheelcanvas" width="422px" height="422px"; ></canvas>
 			<img class="pointer" src="images/turnplate-pointer.png">
 		</div>
 	</div>
@@ -55,11 +55,11 @@
 var turnplate={
 		restaraunts:[],				//大转盘奖品名称
 		colors:[],					//大转盘奖品区块对应背景颜色
-		outsideRadius:192,			//大转盘外圆的半径
-		textRadius:152,				//大转盘奖品位置距离圆心的距离
-		insideRadius:68,			//大转盘内圆的半径
+		outsideRadius:190,			//大转盘外圆的半径
+		textRadius:158,				//大转盘奖品位置距离圆心的距离
+		insideRadius:50,			//大转盘内圆的半径
 		startAngle:0,				//开始角度
-		bRotate:false				//false:停止;ture:旋转
+		bRotate:false				,//false:停止;ture:旋转
 };
 
 $(document).ready(function(){
